--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "framer-motion": "^10.12.16",
+    "install": "^0.13.0",
     "next": "13.4.2",
+    "npm": "^9.6.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.62.1",
